Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17458

Unable to Start Galera Node

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.3.9, 10.3.11, 10.3.14, 10.3.15
    • 10.3.16, 10.4.6
    • Galera
    • None
    • CentOS 7, running on XenServer hypervisor.

    Description

      Servers went down due to failed query. I bootstrapped cluster and was unable to start the remaining nodes with the following error:

      2018-10-12 20:12:15 0 [Warning] WSREP: SST position can't be set in past. Requested: 92172, Current: 3620686.
      2018-10-12 20:12:15 0 [Warning] WSREP: Can't continue.
      2018-10-12 20:12:15 0 [ERROR] Aborting

      It says the current commit is 3620686, but it was actually 9953033. Not sure why this matters since the cluster was restarted and that number restarted.

      Attachments

        Issue Links

          Activity

            People

              sciascid Daniele Sciascia
              obissick Oren Bissick
              Votes:
              3 Vote for this issue
              Watchers:
              11 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.